refactor module system

--- a/src/app/system/account-number-preferences/account-number-preferences.component.html
+++ b/src/app/system/account-number-preferences/account-number-preferences.component.html
@@ -1,7 +1,7 @@
 <div class="container m-b-20" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px">
   <button mat-raised-button color="primary" [routerLink]="['create']" *midasHasPermission="'ADD_PREFERENCES'">
     <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-    Create Preference
+    {{'System.AccountNumberPreferencesComponent.CreatePreference'| translate }}
   </button>
 </div>
 
@@ -9,7 +9,7 @@
 
   <div fxLayout="row">
     <mat-form-field fxFlex>
-      <mat-label>Filter</mat-label>
+      <mat-label>{{'System.AccountNumberPreferencesComponent.Filter'| translate }}</mat-label>
       <input matInput (keyup)="applyFilter($event.target.value)">
     </mat-form-field>
   </div>
@@ -19,7 +19,7 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="accountType">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Account Number Preferences </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.AccountNumberPreferencesComponent.AccountNumberPreferences'| translate }} </th>
         <td mat-cell *matCellDef="let accountNumberPreference"> {{ accountNumberPreference.accountType.value }} </td>
       </ng-container>
 
