--- a/src/app/system/account-number-preferences/view-account-number-preference/view-account-number-preference.component.html
+++ b/src/app/system/account-number-preferences/view-account-number-preference/view-account-number-preference.component.html
@@ -2,12 +2,12 @@
 
   <button mat-raised-button color="primary" [routerLink]="['edit']" *midasHasPermission="'UPDATE_ACCOUNTNUMBERFORMAT'">
     <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;
-    Edit
+    {{ "ShareButton.Edit" | translate }}
   </button>
 
   <button mat-raised-button color="warn" (click)="delete()" *midasHasPermission="'DELETE_ACCOUNTNUMBERFORMAT'">
     <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;
-    Delete
+    {{ "ShareButton.DeleteEng" | translate }}
   </button>
 
 </div>
@@ -21,7 +21,7 @@
       <div fxLayout="row wrap" class="content">
 
         <div fxFlex="50%" class="mat-body-strong">
-          Account Type
+          {{'System.AccountNumberPreferencesComponent.View.accountType'| translate }}
         </div>
 
         <div fxFlex="50%">
@@ -29,7 +29,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong" *ngIf="accountNumberPreferenceData.prefixType">
-          Prefix Type
+          {{'System.AccountNumberPreferencesComponent.View.prefixType'| translate }}
         </div>
 
         <div fxFlex="50%" *ngIf="accountNumberPreferenceData.prefixType">
