--- a/src/app/system/configure-maker-checker-tasks/configure-maker-checker-tasks.component.html
+++ b/src/app/system/configure-maker-checker-tasks/configure-maker-checker-tasks.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="row" fxLayoutAlign="end" fxLayoutGap="2%" fxLayout.lt-md="column" class="container m-b-20">
   <button mat-raised-button color="primary" (click)="editTask(); backupCheckValues();" *midasHasPermission="'UPDATE_PERMISSION'">
     <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;
-    Edit
+    {{ "ShareButton.Edit" | translate }}
   </button>
 </div>
 
@@ -46,8 +46,8 @@
 
     <div fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px" *ngIf="!isDisabled">
       <mat-card-actions>
-        <button type="button" mat-raised-button (click)="cancel(); restoreCheckboxes();">Cancel</button>
-        <button mat-raised-button color="primary" (click)="submit()" *midasHasPermission="'UPDATE_PERMISSION'">Submit</button>
+        <button type="button" mat-raised-button (click)="cancel(); restoreCheckboxes();">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" (click)="submit()" *midasHasPermission="'UPDATE_PERMISSION'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
     </div>
 
