--- a/src/app/system/external-services/external-services.component.html
+++ b/src/app/system/external-services/external-services.component.html
@@ -12,16 +12,16 @@
             <mat-icon matListIcon>
               <fa-icon icon="cloud" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>S3 Amazon External Service</h4>
-            <p matLine>S3 Amazon Service Configuration</p>
+            <h4 matLine>{{'System.ExternalServicesComponent.S3AmazonExternalService'| translate }}</h4>
+            <p matLine>{{'System.ExternalServicesComponent.S3AmazonServiceConfiguration'| translate }}</p>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['sms']">
             <mat-icon matListIcon>
               <fa-icon icon="comment-alt" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>SMS External Service</h4>
-            <p matLine>SMS Service Configuration</p>
+            <h4 matLine>{{'System.ExternalServicesComponent.SMSExternalService'| translate }}</h4>
+            <p matLine>{{'System.ExternalServicesComponent.SMSServiceConfiguration'| translate }}</p>
           </mat-list-item>
 
         </mat-nav-list>
@@ -36,16 +36,16 @@
             <mat-icon matListIcon>
               <fa-icon icon="envelope" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Email External Service</h4>
-            <p matLine>Email Service Configuration</p>
+            <h4 matLine>{{'System.ExternalServicesComponent.EmailExternalService'| translate }}</h4>
+            <p matLine>{{'System.ExternalServicesComponent.EmailServiceConfiguration'| translate }}</p>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['notification']">
             <mat-icon matListIcon>
               <fa-icon icon="bell" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Notification External Service</h4>
-            <p matLine>Notification Service Configuration</p>
+            <h4 matLine>{{'System.ExternalServicesComponent.NotificationExternalService'| translate }}</h4>
+            <p matLine>{{'System.ExternalServicesComponent.NotificationServiceConfiguration'| translate }}</p>
           </mat-list-item>
 
         </mat-nav-list>
