--- a/src/app/system/roles-and-permissions/roles-and-permissions.component.html
+++ b/src/app/system/roles-and-permissions/roles-and-permissions.component.html
@@ -1,7 +1,7 @@
 <div class="container m-b-20" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px" [routerLink]="['add']">
   <button mat-raised-button color="primary">
     <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-    Add Role
+    {{'System.RolesAndPermissions.AddRole'| translate }}
   </button>
 </div>
 
@@ -9,7 +9,7 @@
 
   <div fxLayout="row" fxLayoutGap="20px">
     <mat-form-field fxFlex>
-      <mat-label>Filter</mat-label>
+      <mat-label>{{'System.RolesAndPermissions.Filter'| translate }}</mat-label>
       <input matInput (keyup)="applyFilter($event.target.value)">
     </mat-form-field>
   </div>
@@ -19,17 +19,17 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.RolesAndPermissions.Name'| translate }} </th>
         <td mat-cell *matCellDef="let role"> {{ role.name }} </td>
       </ng-container>
 
       <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.RolesAndPermissions.Description'| translate }} </th>
         <td mat-cell *matCellDef="let role"> {{ role.description }} </td>
       </ng-container>
 
       <ng-container matColumnDef="disabled">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.RolesAndPermissions.Status'| translate }} </th>
         <td mat-cell *matCellDef="let role">
           <div [className]="role.disabled === true ? 'false' : 'true'">
             <fa-icon matTooltip="{{ role.disabled === true ? 'Disabled' : 'Enabled' }}" matTooltipPosition="right" icon="circle" size="lg"></fa-icon>
@@ -38,10 +38,10 @@
       </ng-container>
 
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>Actions</th>
+        <th mat-header-cell *matHeaderCellDef>{{'System.RolesAndPermissions.Actions'| translate }}</th>
         <td mat-cell *matCellDef="let role;" >
           <button *ngIf="role.name !== 'Super user'" mat-icon-button color="primary" (click)="routeEdit($event)" [routerLink]="[role.id, 'edit']">
-            <fa-icon icon="edit"> Edit </fa-icon>
+            <fa-icon icon="edit"> {{'System.RolesAndPermissions.Edit'| translate }} </fa-icon>
           </button>
         </td>
       </ng-container>
