--- a/src/app/system/system.component.html
+++ b/src/app/system/system.component.html
@@ -12,56 +12,56 @@
             <mat-icon matListIcon>
               <fa-icon icon="table" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Manage Data tables</h4>
-            <p matLine>Add new extra fields to any entity in the form of data table</p>
+            <h4 matLine>{{'System.ManageDataTables'| translate}}</h4>
+            <p matLine>{{'System.AddNewExtraFields'| translate}}</p>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['codes']">
             <mat-icon matListIcon>
               <fa-icon icon="list-ul" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Manage Codes</h4>
-            <p matLine>Codes are used to define drop down values</p>
+            <h4 matLine>{{'System.ManageCodes'| translate}}</h4>
+            <p matLine>{{'System.CodesAre'| translate}}</p>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['roles-and-permissions']">
             <mat-icon matListIcon>
               <fa-icon icon="key" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Manage Roles and Permissions</h4>
-            <p matLine>Define or modify roles and associated permissions</p>
+            <h4 matLine>{{'System.ManageRolesAndPermissions'| translate}}</h4>
+            <p matLine>{{'System.DefineOrModifyRoles'| translate}}</p>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['configure-mc-tasks']">
             <mat-icon matListIcon>
               <fa-icon icon="sitemap" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Configure Maker Checker Tasks</h4>
-            <p matLine>Define or modify Maker Checker tasks</p>
+            <h4 matLine>{{'System.ConfigureMaker'| translate}}</h4>
+            <p matLine>{{'System.DefineOrModifyMaker'| translate}}</p>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['hooks']">
             <mat-icon matListIcon>
               <fa-icon icon="anchor" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Manage Hooks</h4>
-            <p matLine>Define Hooks</p>
+            <h4 matLine>{{'System.ManageHooks'| translate}}</h4>
+            <p matLine>{{'System.DefineHooks'| translate}}</p>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['entity-to-entity-mapping']">
             <mat-icon matListIcon>
               <fa-icon icon="road" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Entity to Entity Mapping</h4>
-            <p matLine>Define or modify entity to entity mappings</p>
+            <h4 matLine>{{'System.EntityMapping'| translate}}</h4>
+            <p matLine>{{'System.DefineOrModifyMapping'| translate}}</p>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['surveys']">
             <mat-icon matListIcon>
               <fa-icon icon="file-alt" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Manage Surveys</h4>
-            <p matLine>Manage your Services</p>
+            <h4 matLine>{{'System.ManageSurveys'| translate}}</h4>
+            <p matLine>{{'System.ManageServices'| translate}}</p>
           </mat-list-item>
 
         </mat-nav-list>
@@ -76,56 +76,56 @@
             <mat-icon matListIcon>
               <fa-icon icon="money-check" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Audit Trails</h4>
-            <p matLine>Audit logs of all the activities, such as create client, disburse loans etc</p>
+            <h4 matLine>{{'System.AuditTrails'| translate}}</h4>
+            <p matLine>{{'System.AuditLogs'| translate}}</p>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['reports']">
             <mat-icon matListIcon>
               <fa-icon icon="file-word" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Manage Reports</h4>
-            <p matLine>Add new report and classify reports</p>
+            <h4 matLine>{{'System.ManageReports'| translate}}</h4>
+            <p matLine>{{'System.AddReport'| translate}}</p>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['scheduler-jobs']">
             <mat-icon matListIcon>
               <fa-icon icon="clock" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Scheduler Jobs</h4>
-            <p matLine>Schedule a job, modify or delete jobs</p>
+            <h4 matLine>{{'System.SchedulerJobs'| translate}}</h4>
+            <p matLine>{{'System.ScheduleModifyDeleteJob'| translate}}</p>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['global-configurations']">
             <mat-icon matListIcon>
               <fa-icon icon="cogs" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Configurations</h4>
-            <p matLine>Global configurations and Cache settings</p>
+            <h4 matLine>{{'System.Configurations'| translate}}</h4>
+            <p matLine>{{'System.GlobalConfigurations'| translate}}</p>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['account-number-preferences']">
             <mat-icon matListIcon>
               <fa-icon icon="key" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Account Number Preferences</h4>
-            <p matLine>Preferences for generating account numbers for client, loan and savings accounts</p>
+            <h4 matLine>{{'System.AccountNumberPreferences'| translate}}</h4>
+            <p matLine>{{'System.Preferences'| translate}}</p>
           </mat-list-item>
 
           <mat-list-item [routerLink]="['external-services']">
             <mat-icon matListIcon>
               <fa-icon icon="cog" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>External Services</h4>
-            <p matLine>External Services Configuration</p>
+            <h4 matLine>{{'System.ExternalServices'| translate}}</h4>
+            <p matLine>{{'System.ExternalServicesConfiguration'| translate}}</p>
           </mat-list-item>
 
           <mat-list-item>
             <mat-icon matListIcon>
               <fa-icon icon="key" size="sm"></fa-icon>
             </mat-icon>
-            <h4 matLine>Two-Factor Configuration</h4>
-            <p matLine>Two-factor authentication configuration settings</p>
+            <h4 matLine>{{'System.TwoFactorConfiguration'| translate}}</h4>
+            <p matLine>{{'System.TwoFactorConfigurationSettings'| translate}}</p>
           </mat-list-item>
 
         </mat-nav-list>
