--- a/src/app/system/account-number-preferences/edit-account-number-preference/edit-account-number-preference.component.html
+++ b/src/app/system/account-number-preferences/edit-account-number-preference/edit-account-number-preference.component.html
@@ -9,19 +9,19 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Account Type</mat-label>
+            <mat-label>{{'System.AccountNumberPreferencesComponent.Edit.accountType'| translate }}</mat-label>
             <mat-select required formControlName="accountType">
               <mat-option *ngFor="let accountType of accountNumberPreferencesTemplateData.accountTypeOptions" [value]="accountType.id">
                 {{ accountType.value }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="accountNumberPreferenceForm.controls.accountType.hasError('required')">
-              Account Type is <strong>required</strong>
+              {{'System.AccountNumberPreferencesComponent.Edit.erraccountType'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Prefix Field</mat-label>
+            <mat-label>{{'System.AccountNumberPreferencesComponent.Edit.prefixType'| translate }}</mat-label>
             <mat-select formControlName="prefixType">
               <mat-option *ngFor="let prefixType of prefixTypeData" [value]="prefixType.id">
                 {{ prefixType.value }}
@@ -34,9 +34,9 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
         <button mat-raised-button color="primary"
-          [disabled]="!accountNumberPreferenceForm.valid || accountNumberPreferenceForm.pristine" *midasHasPermission="'UPDATE_ACCOUNTNUMBERFORMAT'">Submit</button>
+          [disabled]="!accountNumberPreferenceForm.valid || accountNumberPreferenceForm.pristine" *midasHasPermission="'UPDATE_ACCOUNTNUMBERFORMAT'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
