--- a/src/app/system/audit-trails/audit-trails.component.html
+++ b/src/app/system/audit-trails/audit-trails.component.html
@@ -1,19 +1,19 @@
 <div class="container m-b-20" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px">
   <button mat-raised-button color="primary" (click)="downloadCSV()">
     <fa-icon icon="file"></fa-icon>&nbsp;&nbsp;
-    Download CSV
+    {{'System.AuditTrailsComponent.downloadCSV'| translate }}
   </button>
 </div>
 
 <div class="container" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
 
   <mat-form-field fxFlex="48%">
-    <mat-label>Resource ID</mat-label>
+    <mat-label>{{'System.AuditTrailsComponent.resourceId'| translate }}</mat-label>
     <input matInput [formControl]="resourceId">
   </mat-form-field>
 
   <mat-form-field fxFlex="48%">
-    <mat-label>Status</mat-label>
+    <mat-label>{{'System.AuditTrailsComponent.Status'| translate }}</mat-label>
     <mat-select [formControl]="processingResult" (selectionChange)="applyFilter($event.value, 'processingResult')">
       <mat-option *ngFor="let processingResult of auditTrailSearchTemplateData.processingResults" [value]="processingResult.id">
         {{ processingResult.processingResult }}
@@ -22,41 +22,41 @@
   </mat-form-field>
 
   <mat-form-field fxFlex="48%">
-    <mat-label>User</mat-label>
+    <mat-label>{{'System.AuditTrailsComponent.User'| translate }}</mat-label>
     <input matInput [formControl]="user" [matAutocomplete]="userNameAutocomplete">
   </mat-form-field>
 
   <mat-form-field fxFlex="48%">
-    <mat-label>Action</mat-label>
+    <mat-label>{{'System.AuditTrailsComponent.Action'| translate }}</mat-label>
     <input matInput [formControl]="actionName" [matAutocomplete]="actionNameAutocomplete">
   </mat-form-field>
 
   <mat-form-field fxFlex="48%">
-    <mat-label>Entity</mat-label>
+    <mat-label>{{'System.AuditTrailsComponent.Entity'| translate }}</mat-label>
     <input matInput [formControl]="entityName" [matAutocomplete]="entityNameAutocomplete">
   </mat-form-field>
 
   <mat-form-field fxFlex="48%">
-    <mat-label>Checker</mat-label>
+    <mat-label>{{'System.AuditTrailsComponent.Checker'| translate }}</mat-label>
     <input matInput [formControl]="checker" [matAutocomplete]="checkerAutocomplete">
   </mat-form-field>
 
   <mat-form-field fxFlex="48%">
-    <mat-label>Maker From Date</mat-label>
+    <mat-label>{{'System.AuditTrailsComponent.fromDate'| translate }}</mat-label>
     <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="fromDatePicker" [formControl]="fromDate">
     <mat-datepicker-toggle matSuffix [for]="fromDatePicker"></mat-datepicker-toggle>
     <mat-datepicker #fromDatePicker></mat-datepicker>
   </mat-form-field>
 
   <mat-form-field fxFlex="48%">
-    <mat-label>Maker To Date</mat-label>
+    <mat-label>{{'System.AuditTrailsComponent.toDate'| translate }}</mat-label>
     <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="toDatePicker" [formControl]="toDate">
     <mat-datepicker-toggle matSuffix [for]="toDatePicker"></mat-datepicker-toggle>
     <mat-datepicker #toDatePicker></mat-datepicker>
   </mat-form-field>
 
   <mat-form-field fxFlex="48%">
-    <mat-label>Checker From Date</mat-label>
+    <mat-label>{{'System.AuditTrailsComponent.checkedFromDate'| translate }}</mat-label>
     <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="checkedFromDatePicker"
       [formControl]="checkedFromDate">
     <mat-datepicker-toggle matSuffix [for]="checkedFromDatePicker"></mat-datepicker-toggle>
@@ -64,7 +64,7 @@
   </mat-form-field>
 
   <mat-form-field fxFlex="48%">
-    <mat-label>Checked To Date</mat-label>
+    <mat-label>{{'System.AuditTrailsComponent.checkedToDate'| translate }}</mat-label>
     <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="checkedToDatePicker" [formControl]="checkedToDate">
     <mat-datepicker-toggle matSuffix [for]="checkedToDatePicker"></mat-datepicker-toggle>
     <mat-datepicker #checkedToDatePicker></mat-datepicker>
@@ -102,52 +102,52 @@
   <table mat-table [dataSource]="dataSource" matSort>
 
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Trail ID </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.AuditTrailsComponent.id'| translate }} </th>
       <td mat-cell *matCellDef="let auditTrail"> {{ auditTrail.id }} </td>
     </ng-container>
 
     <ng-container matColumnDef="resourceId">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Resource ID </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.AuditTrailsComponent.resourceId'| translate }} </th>
       <td mat-cell *matCellDef="let auditTrail"> {{ auditTrail.resourceId }} </td>
     </ng-container>
 
     <ng-container matColumnDef="processingResult">
-      <th mat-header-cell *matHeaderCellDef> Status </th>
+      <th mat-header-cell *matHeaderCellDef> {{'System.AuditTrailsComponent.Status'| translate }} </th>
       <td mat-cell *matCellDef="let auditTrail"> {{ auditTrail.processingResult }} </td>
     </ng-container>
 
     <ng-container matColumnDef="maker">
-      <th mat-header-cell *matHeaderCellDef> Made By </th>
+      <th mat-header-cell *matHeaderCellDef> {{'System.AuditTrailsComponent.maker'| translate }} </th>
       <td mat-cell *matCellDef="let auditTrail"> {{ auditTrail.maker }} </td>
     </ng-container>
 
     <ng-container matColumnDef="actionName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.AuditTrailsComponent.Action'| translate }} </th>
       <td mat-cell *matCellDef="let auditTrail"> {{ auditTrail.actionName }} </td>
     </ng-container>
 
     <ng-container matColumnDef="entityName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Entity </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.AuditTrailsComponent.Entity'| translate }} </th>
       <td mat-cell *matCellDef="let auditTrail"> {{ auditTrail.entityName }} </td>
     </ng-container>
 
     <ng-container matColumnDef="officeName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Office </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.AuditTrailsComponent.Office'| translate }} </th>
       <td mat-cell *matCellDef="let auditTrail"> {{ auditTrail.officeName }} </td>
     </ng-container>
 
     <ng-container matColumnDef="madeOnDate">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Made Date </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.AuditTrailsComponent.madeOnDate'| translate }} </th>
       <td mat-cell *matCellDef="let auditTrail"> {{ auditTrail.madeOnDate | date  }} </td>
     </ng-container>
 
     <ng-container matColumnDef="checker">
-      <th mat-header-cell *matHeaderCellDef> Checker </th>
+      <th mat-header-cell *matHeaderCellDef> {{'System.AuditTrailsComponent.Checker'| translate }} </th>
       <td mat-cell *matCellDef="let auditTrail"> {{ auditTrail.checker  }} </td>
     </ng-container>
 
     <ng-container matColumnDef="checkedOnDate">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Checked Date </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.AuditTrailsComponent.checkedOnDate'| translate }} </th>
       <td mat-cell *matCellDef="let auditTrail"> {{ auditTrail.checkedOnDate | date  }} </td>
     </ng-container>
 
