--- a/src/app/system/codes/edit-code/edit-code.component.html
+++ b/src/app/system/codes/edit-code/edit-code.component.html
@@ -9,10 +9,10 @@
           <div fxLayout="column">
 
             <mat-form-field>
-              <mat-label>Code Name</mat-label>
+              <mat-label>{{'System.CodeComponent.Edit.CodeName'| translate }}</mat-label>
               <input matInput required formControlName="name">
               <mat-error *ngIf="codeForm.controls.name.hasError('required')">
-                Code Name is <strong>required</strong>
+                {{'System.CodeComponent.Edit.errCodeName'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
               </mat-error>
             </mat-form-field>
 
@@ -21,8 +21,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!codeForm.valid || codeForm.pristine" *midasHasPermission="'UPDATE_CODE'">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!codeForm.valid || codeForm.pristine" *midasHasPermission="'UPDATE_CODE'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
