--- a/src/app/system/codes/view-code/view-code.component.html
+++ b/src/app/system/codes/view-code/view-code.component.html
@@ -2,20 +2,20 @@
 
   <button mat-raised-button color="primary" (click)="addCodeValueRow()" *midasHasPermission="'CREATE_CODEVALUE'">
     <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-    Add Code Value
+    {{'System.CodeComponent.View.AddCodeValue'| translate }}
   </button>
 
   <span *ngIf="!codeData.systemDefined">
   <button mat-raised-button color="primary" [routerLink]="['edit']" *midasHasPermission="'UPDATE_CODE'">
     <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;
-    Edit Code
+    {{'System.CodeComponent.View.EditCode'| translate }}
   </button>
   </span>
 
   <span *ngIf="!codeData.systemDefined">
     <button mat-raised-button color="warn" (click)="delete()" *midasHasPermission="'DELETE_CODEVALUE'">
       <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;
-      Delete Code
+      {{'System.CodeComponent.View.DeleteCode'| translate }}
     </button>
   </span>
 
@@ -36,39 +36,39 @@
           <div fxFlexFill fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroupName]="i">
 
             <mat-form-field fxFlex="20%">
-              <mat-label>Name</mat-label>
+              <mat-label>{{'System.CodeComponent.View.Name'| translate }}</mat-label>
               <input required matInput formControlName="name">
               <mat-error *ngIf="codeValues.at(i).controls.name.hasError('required')">
-                Name is <strong>required</strong>
+                {{'System.CodeComponent.View.errName'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
               </mat-error>
             </mat-form-field>
 
             <mat-form-field fxFlex="22%">
-              <mat-label>Description</mat-label>
+              <mat-label>{{'System.CodeComponent.View.Description'| translate }}</mat-label>
               <input matInput formControlName="description">
             </mat-form-field>
 
             <mat-form-field fxFlex="18%">
-              <mat-label>Position</mat-label>
+              <mat-label>{{'System.CodeComponent.View.Position'| translate }}</mat-label>
               <input required matInput formControlName="position" type="number">
               <mat-error *ngIf="codeValues.at(i).controls.position.hasError('required')">
-                Name is <strong>required</strong>
+                {{'System.CodeComponent.View.errName'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
               </mat-error>
             </mat-form-field>
 
             <div class="active-wrapper" fxFlex="8%">
-              <mat-checkbox formControlName="isActive" class="active">Active</mat-checkbox>
+              <mat-checkbox formControlName="isActive" class="active">{{'System.CodeComponent.View.Active'| translate }}</mat-checkbox>
             </div>
 
             <div fxLayoutGap="2%" fxFlex="22%" class="options-wrapper">
               <span *ngIf="codeValueRowStatus[i] === 'edit'">
                 <button mat-stroked-button color="primary" [disabled]="codeValues.at(i).pristine" (click)="updateCodeValue(i)"
                   *midasHasPermission="'UPDATE_CODEVALUE'">
-                  Submit
+                  {{ "ShareButton.Submit" | translate }}
                 </button>
               </span>
               <button mat-button *ngIf="codeValueRowStatus[i] === 'edit'" (click)="disableRow(i)">
-                Cancel
+                {{ "ShareButton.CancelEng" | translate }}
               </button>
               <button mat-icon-button color="primary" [disabled]="!codeValuesForm.get('codeValues').at(i).valid" *ngIf="codeValueRowStatus[i] === 'new'" matTooltip="Add" matTooltipPosition="above" (click)="addCodeValue(i)">
                 <fa-icon icon="plus" size="lg"></fa-icon>
