--- a/src/app/system/entity-to-entity-mapping/entity-to-entity-mapping.component.html
+++ b/src/app/system/entity-to-entity-mapping/entity-to-entity-mapping.component.html
@@ -6,19 +6,19 @@
         <th mat-header-cell *matHeaderCellDef> Mapping Between Entities </th>
         <td mat-cell *matCellDef="let mappingType" (click)="showFilters(mappingType.id)">
           <span *ngIf="mappingType.mappingTypes == 'office_access_to_loan_products'">
-            Offices --> Loan Products
+            {{'System.EntityToEntityMappingComponent.office_access_to_loan_products'| translate }}
           </span>
           <span *ngIf="mappingType.mappingTypes == 'office_access_to_savings_products'">
-            Offices --> Savings Products
+            {{'System.EntityToEntityMappingComponent.office_access_to_savings_products'| translate }}
           </span>
           <span *ngIf="mappingType.mappingTypes == 'office_access_to_fees/charges'">
-            Offices --> Charges/Fees
+            {{'System.EntityToEntityMappingComponent.office_access_to_fees'| translate }}
           </span>
           <span *ngIf="mappingType.mappingTypes == 'role_access_to_loan_products'">
-            Roles --> Loan Products
+            {{'System.EntityToEntityMappingComponent.role_access_to_loan_products'| translate }}
           </span>
           <span *ngIf="mappingType.mappingTypes == 'role_access_to_savings_products'">
-            Roles --> Savings Products
+            {{'System.EntityToEntityMappingComponent.role_access_to_savings_products'| translate }}
           </span>
         </td>
       </ng-container>
@@ -33,7 +33,7 @@
       <mat-card>
 
         <form [formGroup]="filterPreferenceForm" (ngSubmit)="showFilteredData()">
-          <mat-card-title> {{firstMappingEntity}} access to {{secondMappingEntity}} </mat-card-title>
+          <mat-card-title> {{firstMappingEntity}} {{'System.EntityToEntityMappingComponent.title'| translate }}{{secondMappingEntity}} </mat-card-title>
           <mat-card-content>
 
             <div fxLayout="row" fxLayoutAlign="space-evenly center">
@@ -42,14 +42,14 @@
                 <mat-label>{{firstMappingEntity}}</mat-label>
                 <mat-select required formControlName="mappingFirstParamId">
                   <mat-option [value]="0">
-                    All
+                    {{'System.EntityToEntityMappingComponent.All'| translate }}
                   </mat-option>
                   <mat-option *ngFor="let firstEntity of firstEntityData" [value]="firstEntity.id">
                     {{ firstEntity.name }}
                   </mat-option>
                 </mat-select>
                 <mat-error *ngIf="filterPreferenceForm.controls.mappingFirstParamId.hasError('required')">
-                  {{firstMappingEntity}} is <strong>required</strong>
+                  {{firstMappingEntity}} {{'System.EntityToEntityMappingComponent.is'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
                 </mat-error>
               </mat-form-field>
 
@@ -57,14 +57,14 @@
                 <mat-label>{{secondMappingEntity}}</mat-label>
                 <mat-select required formControlName="mappingSecondParamId">
                   <mat-option [value]="0">
-                    All
+                    {{'System.EntityToEntityMappingComponent.All'| translate }}
                   </mat-option>
                   <mat-option *ngFor="let secondEntity of secondEntityData" [value]="secondEntity.id">
                     {{ secondEntity.name }}
                   </mat-option>
                 </mat-select>
                 <mat-error *ngIf="filterPreferenceForm.controls.mappingSecondParamId.hasError('required')">
-                  {{secondMappingEntity}} is <strong>required</strong>
+                  {{secondMappingEntity}} {{'System.EntityToEntityMappingComponent.is'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
                 </mat-error>
               </mat-form-field>
 
@@ -92,12 +92,12 @@
               </ng-container>
 
               <ng-container matColumnDef="startdate">
-                <th mat-header-cell *matHeaderCellDef> Start Date </th>
+                <th mat-header-cell *matHeaderCellDef> {{'System.EntityToEntityMappingComponent.startdate'| translate }} </th>
                 <td mat-cell *matCellDef="let listdata"> {{ listdata.startDate }} </td>
               </ng-container>
 
               <ng-container matColumnDef="enddate">
-                <th mat-header-cell *matHeaderCellDef> End Date </th>
+                <th mat-header-cell *matHeaderCellDef> {{'System.EntityToEntityMappingComponent.endDate'| translate }} </th>
                 <td mat-cell *matCellDef="let listdata"> {{ listdata.endDate }} </td>
               </ng-container>
 
