--- a/src/app/system/external-services/amazon-s3/amazon-s3.component.html
+++ b/src/app/system/external-services/amazon-s3/amazon-s3.component.html
@@ -10,12 +10,12 @@
   <table mat-table [dataSource]="dataSource" matSort>
 
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ExternalServicesComponent.AmazonS3.Name'| translate }} </th>
       <td mat-cell *matCellDef="let configuration"> {{ configuration.name }} </td>
     </ng-container>
 
     <ng-container matColumnDef="value">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Value </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ExternalServicesComponent.AmazonS3.Value'| translate }} </th>
       <td mat-cell *matCellDef="let configuration"> {{ configuration.value }} </td>
     </ng-container>
 
