--- a/src/app/system/external-services/amazon-s3/edit-amazon-s3/edit-amazon-s3.component.html
+++ b/src/app/system/external-services/amazon-s3/edit-amazon-s3/edit-amazon-s3.component.html
@@ -9,26 +9,26 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>S3 Access Key</mat-label>
+            <mat-label>{{'System.ExternalServicesComponent.AmazonS3.EditAmazonS3.s3_access_key'| translate }}</mat-label>
             <input matInput required formControlName="s3_access_key">
             <mat-error *ngIf="amazonS3ConfigurationForm.controls.s3_access_key.hasError('required')">
-              S3 Access Key is <strong>required</strong>
+              {{'System.ExternalServicesComponent.AmazonS3.EditAmazonS3.errs3_access_key'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>S3 Bucket Name</mat-label>
+            <mat-label>{{'System.ExternalServicesComponent.AmazonS3.EditAmazonS3.s3_bucket_name'| translate }}</mat-label>
             <input matInput required formControlName="s3_bucket_name">
             <mat-error *ngIf="amazonS3ConfigurationForm.controls.s3_bucket_name.hasError('required')">
-              S3 Bucket Name is <strong>required</strong>
+              {{'System.ExternalServicesComponent.AmazonS3.EditAmazonS3.errs3_bucket_name'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>S3 Secret Key</mat-label>
+            <mat-label>{{'System.ExternalServicesComponent.AmazonS3.EditAmazonS3.s3_secret_key'| translate }}</mat-label>
             <input matInput required formControlName="s3_secret_key">
             <mat-error *ngIf="amazonS3ConfigurationForm.controls.s3_secret_key.hasError('required')">
-              S3 Secret Key is <strong>required</strong>
+              {{'System.ExternalServicesComponent.AmazonS3.EditAmazonS3.errs3_secret_key'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
@@ -37,8 +37,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!amazonS3ConfigurationForm.valid || amazonS3ConfigurationForm.pristine">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!amazonS3ConfigurationForm.valid || amazonS3ConfigurationForm.pristine">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
