--- a/src/app/system/global-configurations/edit-configuration/edit-configuration.component.html
+++ b/src/app/system/global-configurations/edit-configuration/edit-configuration.component.html
@@ -9,15 +9,15 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Configuration Name</mat-label>
+            <mat-label>{{'System.GlobalConfigurationsComponent.EditConfigurationsComponent.name'| translate }}</mat-label>
             <input matInput required formControlName="name">
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Configuration Value</mat-label>
+            <mat-label>{{'System.GlobalConfigurationsComponent.EditConfigurationsComponent.value'| translate }}</mat-label>
             <input matInput required type="number" formControlName="value">
             <mat-error *ngIf="configurationForm.controls.value.hasError('required')">
-              Configuration Value is <strong>required</strong>
+              {{'System.GlobalConfigurationsComponent.EditConfigurationsComponent.errvalue'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
@@ -26,12 +26,12 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../']"> Cancel </button>
-        <button mat-raised-button color="primary" [disabled]="configurationForm.pristine || !configurationForm.valid"> Submit </button>
+        <button type="button" mat-raised-button [routerLink]="['../../']"> {{ "ShareButton.CancelEng" | translate }} </button>
+        <button mat-raised-button color="primary" [disabled]="configurationForm.pristine || !configurationForm.valid"> {{ "ShareButton.Submit" | translate }} </button>
       </mat-card-actions>
 
     </form>
-    
+
   </mat-card>
-  
+
 </div>
