--- a/src/app/system/manage-data-tables/create-data-table/create-data-table.component.html
+++ b/src/app/system/manage-data-tables/create-data-table/create-data-table.component.html
@@ -9,27 +9,27 @@
         <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
 
           <mat-form-field fxFlex="40%">
-            <mat-label>Data Table Name</mat-label>
+            <mat-label>{{'System.ManageDataTable.CreateDataTable.datatableName'| translate }}</mat-label>
             <input matInput required formControlName="datatableName">
             <mat-error *ngIf="dataTableForm.controls.datatableName.hasError('required')">
-              Data Table Name is <strong>required</strong>
+              {{'System.ManageDataTable.CreateDataTable.errdatatableName'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="40%">
-            <mat-label>Application Table Name</mat-label>
+            <mat-label>{{'System.ManageDataTable.CreateDataTable.apptableName'| translate }}</mat-label>
             <mat-select required formControlName="apptableName">
               <mat-option *ngFor="let appTable of appTableData" [value]="appTable.value">
                 {{ appTable.displayValue }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="dataTableForm.controls.apptableName.hasError('required')">
-              Application Table Name is <strong>required</strong>
+              {{'System.ManageDataTable.CreateDataTable.errapptableName'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <div fxFlex="14%" class="multi-row-wrapper">
-            <mat-checkbox labelPosition="before" formControlName="multiRow" class="multi-row">Multi Row</mat-checkbox>
+            <mat-checkbox labelPosition="before" formControlName="multiRow" class="multi-row">{{'System.ManageDataTable.CreateDataTable.MultiRow'| translate }}</mat-checkbox>
           </div>
 
         </div>
@@ -37,11 +37,11 @@
 
         <div fxLayout="row wrap" fxLayoutGap="60%" fxLayout.lt-md="column">
 
-          <p fxFlex="20%" class="mat-title">Columns</p>
+          <p fxFlex="20%" class="mat-title">{{'System.ManageDataTable.CreateDataTable.Columns'| translate }}</p>
 
           <button mat-raised-button fxFlex="20%" type="button" color="primary" (click)="addColumn()">
             <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-            Add Column
+            {{'System.ManageDataTable.CreateDataTable.AddColumn'| translate }}
           </button>
 
         </div>
@@ -51,32 +51,32 @@
         <table mat-table [dataSource]="dataSource" matSort>
 
           <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageDataTable.CreateDataTable.Name'| translate }} </th>
             <td mat-cell *matCellDef="let column"> {{ column.name }} </td>
           </ng-container>
 
           <ng-container matColumnDef="type">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageDataTable.CreateDataTable.Type'| translate }} </th>
             <td mat-cell *matCellDef="let column"> {{ column.type }} </td>
           </ng-container>
 
           <ng-container matColumnDef="mandatory">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Mandatory </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageDataTable.CreateDataTable.Mandatory'| translate }} </th>
             <td mat-cell *matCellDef="let column"> {{ column.mandatory }} </td>
           </ng-container>
 
           <ng-container matColumnDef="length">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Length </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageDataTable.CreateDataTable.Length'| translate }} </th>
             <td mat-cell *matCellDef="let column"> {{ column.length }} </td>
           </ng-container>
 
           <ng-container matColumnDef="code">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Code </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageDataTable.CreateDataTable.Code'| translate }} </th>
             <td mat-cell *matCellDef="let column"> {{ column.code }} </td>
           </ng-container>
 
           <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageDataTable.CreateDataTable.Actions'| translate }} </th>
             <td mat-cell *matCellDef="let column" fxLayoutGap="15%">
               <button type="button" color="primary" mat-icon-button (click)="editColumn(column)">
                 <fa-icon icon="edit" size="lg"></fa-icon>
@@ -97,9 +97,9 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
         <button mat-raised-button color="primary"
-          [disabled]="!dataTableForm.valid || columnData.length === 0">Submit</button>
+          [disabled]="!dataTableForm.valid || columnData.length === 0">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
