--- a/src/app/system/manage-data-tables/edit-data-table/edit-data-table.component.html
+++ b/src/app/system/manage-data-tables/edit-data-table/edit-data-table.component.html
@@ -9,19 +9,19 @@
         <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
 
           <mat-form-field fxFlex="40%">
-            <mat-label>Data Table Name</mat-label>
+            <mat-label>{{'System.ManageDataTable.EditDataTable.datatableName'| translate }}</mat-label>
             <input matInput required formControlName="datatableName">
           </mat-form-field>
 
           <mat-form-field fxFlex="40%">
-            <mat-label>Application Table Name</mat-label>
+            <mat-label>{{'System.ManageDataTable.EditDataTable.apptableName'| translate }}</mat-label>
             <mat-select required formControlName="apptableName">
               <mat-option *ngFor="let appTable of appTableData" [value]="appTable.value">
                 {{ appTable.displayValue }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="dataTableForm.controls.apptableName.hasError('required')">
-              Application Table Name is <strong>required</strong>
+              {{'System.ManageDataTable.EditDataTable.errapptableName'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
@@ -31,11 +31,11 @@
 
         <div fxLayout="row wrap" fxLayoutGap="60%" fxLayout.lt-md="column">
 
-          <p fxFlex="20%" class="mat-title">Columns</p>
+          <p fxFlex="20%" class="mat-title">{{'System.ManageDataTable.EditDataTable.Columns'| translate }}</p>
 
           <button mat-raised-button fxFlex="20%" type="button" color="primary" (click)="addColumn()">
             <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-            Add Column
+            {{'System.ManageDataTable.EditDataTable.AddColumn'| translate }}
           </button>
 
         </div>
@@ -45,32 +45,32 @@
         <table mat-table [dataSource]="dataSource" matSort>
 
           <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageDataTable.EditDataTable.Name'| translate }} </th>
             <td mat-cell *matCellDef="let column"> {{ column.columnName }} </td>
           </ng-container>
 
           <ng-container matColumnDef="type">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageDataTable.EditDataTable.Type'| translate }} </th>
             <td mat-cell *matCellDef="let column"> {{ column.columnDisplayType }} </td>
           </ng-container>
 
           <ng-container matColumnDef="mandatory">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Mandatory </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageDataTable.EditDataTable.Mandatory'| translate }} </th>
             <td mat-cell *matCellDef="let column"> {{ column.isColumnPrimaryKey }} </td>
           </ng-container>
 
           <ng-container matColumnDef="length">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Length </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageDataTable.EditDataTable.Length'| translate }} </th>
             <td mat-cell *matCellDef="let column"> {{ column.columnLength }} </td>
           </ng-container>
 
           <ng-container matColumnDef="code">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Code </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageDataTable.EditDataTable.Code'| translate }} </th>
             <td mat-cell *matCellDef="let column"> {{ column.columnCode }} </td>
           </ng-container>
 
           <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageDataTable.EditDataTable.Actions'| translate }} </th>
             <td mat-cell *matCellDef="let column" fxLayoutGap="15%">
               <button type="button" color="primary" mat-icon-button (click)="editColumn(column)">
                 <fa-icon icon="edit" size="lg"></fa-icon>
@@ -91,9 +91,9 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
         <button mat-raised-button color="primary"
-          [disabled]="!dataTableForm.valid || dataTableForm.pristine && !isFormEdited" *midasHasPermission="'UPDATE_DATATABLE'">Submit</button>
+          [disabled]="!dataTableForm.valid || dataTableForm.pristine && !isFormEdited" *midasHasPermission="'UPDATE_DATATABLE'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
