--- a/src/app/system/manage-data-tables/manage-data-tables.component.html
+++ b/src/app/system/manage-data-tables/manage-data-tables.component.html
@@ -1,7 +1,7 @@
 <div class="container m-b-20" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px">
   <button mat-raised-button color="primary" [routerLink]="['create']" *midasHasPermission="'CREATE_DATATABLE'">
     <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-    Create Data Table
+    {{'System.ManageDataTable.btnCreateDataTable'| translate }}
   </button>
 </div>
 
@@ -9,7 +9,7 @@
 
   <div fxLayout="row" fxLayoutGap="20px">
     <mat-form-field fxFlex>
-      <mat-label>Filter</mat-label>
+      <mat-label>{{'System.ManageDataTable.Filter'| translate }}</mat-label>
       <input matInput (keyup)="applyFilter($event.target.value)">
     </mat-form-field>
   </div>
@@ -19,12 +19,12 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="registeredTableName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Data Table Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageDataTable.registeredTableName'| translate }} </th>
         <td mat-cell *matCellDef="let dataTable"> {{ dataTable.registeredTableName }} </td>
       </ng-container>
 
       <ng-container matColumnDef="applicationTableName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Associated With </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageDataTable.applicationTableName'| translate }} </th>
         <td mat-cell *matCellDef="let dataTable"> {{ dataTable.applicationTableName }} </td>
       </ng-container>
 
