--- a/src/app/system/manage-hooks/add-event-dialog/add-event-dialog.component.html
+++ b/src/app/system/manage-hooks/add-event-dialog/add-event-dialog.component.html
@@ -7,38 +7,38 @@
     <div fxLayout="column">
 
       <mat-form-field>
-        <mat-label>Select Grouping</mat-label>
+        <mat-label>{{'System.ManageHooksComponent.AddEventDialog.grouping'| translate }}Select Grouping</mat-label>
         <mat-select required formControlName="grouping">
           <mat-option *ngFor="let grouping of data.groupings" [value]="grouping.name">
             {{ grouping.name }}
           </mat-option>
         </mat-select>
         <mat-error *ngIf="eventForm.controls.grouping.hasError('required')">
-          Grouping is <strong>required</strong>
+          {{'System.ManageHooksComponent.AddEventDialog.errgrouping'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
         </mat-error>
       </mat-form-field>
 
       <mat-form-field>
-        <mat-label>Select Entity</mat-label>
+        <mat-label>{{'System.ManageHooksComponent.AddEventDialog.entity'| translate }}</mat-label>
         <mat-select required formControlName="entity">
           <mat-option *ngFor="let entity of entityData" [value]="entity.name">
             {{ entity.name }}
           </mat-option>
         </mat-select>
         <mat-error *ngIf="eventForm.controls.entity.hasError('required')">
-          Entity is <strong>required</strong>
+          {{'System.ManageHooksComponent.AddEventDialog.errentity'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
         </mat-error>
       </mat-form-field>
 
       <mat-form-field>
-        <mat-label>Select Action</mat-label>
+        <mat-label>{{'System.ManageHooksComponent.AddEventDialog.action'| translate }}</mat-label>
         <mat-select required formControlName="action">
           <mat-option *ngFor="let action of actionData" [value]="action">
             {{ action }}
           </mat-option>
         </mat-select>
         <mat-error *ngIf="eventForm.controls.action.hasError('required')">
-          Action is <strong>required</strong>
+          {{'System.ManageHooksComponent.AddEventDialog.erraction'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
         </mat-error>
       </mat-form-field>
 
@@ -49,7 +49,7 @@
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Cancel</button>
+  <button mat-button mat-dialog-close>{{ "ShareButton.CancelEng" | translate }}</button>
   <button mat-raised-button color="primary"
-    [disabled]="!eventForm.valid || eventForm.pristine" (click)="submit()">Submit</button>
+    [disabled]="!eventForm.valid || eventForm.pristine" (click)="submit()">{{ "ShareButton.Submit" | translate }}</button>
 </mat-dialog-actions>
