--- a/src/app/system/manage-hooks/edit-hook/edit-hook.component.html
+++ b/src/app/system/manage-hooks/edit-hook/edit-hook.component.html
@@ -9,28 +9,28 @@
         <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="4%">
 
           <mat-form-field fxFlex="40%">
-            <mat-label>Hook Template</mat-label>
+            <mat-label>{{'System.ManageHooksComponent.EditHook.name'| translate }}</mat-label>
             <mat-select required formControlName="name">
               <mat-option *ngFor="let hookTemplate of hooksTemplateData.templates" [value]="hookTemplate.name">
                 {{ hookTemplate.name }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="hookForm.controls.name.hasError('required')">
-              Hook Template is <strong>required</strong>
+              {{'System.ManageHooksComponent.EditHook.errname'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="40%">
-            <mat-label>Display Name</mat-label>
+            <mat-label>{{'System.ManageHooksComponent.EditHook.displayName'| translate }}</mat-label>
             <input matInput required formControlName="displayName">
             <mat-error *ngIf="hookForm.controls.displayName.hasError('required')">
-              Display Name is <strong>required</strong>
+              {{'System.ManageHooksComponent.EditHook.errdisplayName'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <div class="is-active-wrapper">
             <mat-checkbox class="is-active" fxFlex="10%" labelPosition="before" formControlName="isActive">
-              Is Active?
+              {{'System.ManageHooksComponent.EditHook.isActive'| translate }}
             </mat-checkbox>
           </div>
 
@@ -39,34 +39,34 @@
         <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="4%">
 
           <mat-form-field fxFlex="48%" *ngIf="hookForm.controls.name.value === 'Web'">
-            <mat-label>Content Type</mat-label>
+            <mat-label>{{'System.ManageHooksComponent.EditHook.contentType'| translate }}</mat-label>
             <mat-select required formControlName="contentType">
               <mat-option [value]="'json'">
-                json
+                {{'System.ManageHooksComponent.EditHook.json'| translate }}
               </mat-option>
               <mat-option [value]="'form'">
-                form
+                {{'System.ManageHooksComponent.EditHook.form'| translate }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="hookForm.controls.contentType.hasError('required')">
-              Content Type is <strong>required</strong>
+              {{'System.ManageHooksComponent.EditHook.errcontentType'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%" *ngIf="hookForm.controls.name.value === 'SMS Bridge'">
-            <mat-label>Phone Number</mat-label>
+            <mat-label>{{'System.ManageHooksComponent.EditHook.phoneNumber'| translate }}</mat-label>
             <input matInput type="tel" #input maxlength="10" required formControlName="phoneNumber">
             <mat-hint align="end">{{input.value?.length || 0}}/10</mat-hint>
             <mat-error *ngIf="hookForm.controls.phoneNumber.hasError('required')">
-              Payload URL is <strong>required</strong>
+              {{'System.ManageHooksComponent.EditHook.PayloadURLIs'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="48%">
-            <mat-label>Payload URL</mat-label>
+            <mat-label>{{'System.ManageHooksComponent.EditHook.payloadUrl'| translate }}</mat-label>
             <input matInput required formControlName="payloadUrl">
             <mat-error *ngIf="hookForm.controls.payloadUrl.hasError('required')">
-              Payload URL is <strong>required</strong>
+              {{'System.ManageHooksComponent.EditHook.PayloadURLIs'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
@@ -76,26 +76,26 @@
           *ngIf="hookForm.controls.name.value === 'SMS Bridge'">
 
           <mat-form-field fxFlex="30%">
-            <mat-label>SMS Provider</mat-label>
+            <mat-label>{{'System.ManageHooksComponent.EditHook.smsProvider'| translate }}</mat-label>
             <input matInput required formControlName="smsProvider">
             <mat-error *ngIf="hookForm.controls.smsProvider.hasError('required')">
-              SMS Provider is <strong>required</strong>
+              {{'System.ManageHooksComponent.EditHook.xxx'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="30%">
-            <mat-label>SMS Provider Account ID</mat-label>
+            <mat-label>{{'System.ManageHooksComponent.EditHook.xxx'| translate }}SMS Provider Account ID</mat-label>
             <input matInput required formControlName="smsProviderAccountId">
             <mat-error *ngIf="hookForm.controls.smsProviderAccountId.hasError('required')">
-              SMS Provider Account ID is <strong>required</strong>
+              {{'System.ManageHooksComponent.EditHook.errsmsProvider'| translate }}SMS Provider Account ID is <strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="30%">
-            <mat-label>SMS Provider Token</mat-label>
+            <mat-label>{{'System.ManageHooksComponent.EditHook.smsProviderToken'| translate }}</mat-label>
             <input matInput required formControlName="smsProviderToken">
             <mat-error *ngIf="hookForm.controls.smsProviderToken.hasError('required')">
-              SMS Provider Token is <strong>required</strong>
+              {{'System.ManageHooksComponent.EditHook.errsmsProviderToken'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
@@ -109,11 +109,11 @@
 
         <div fxLayout="row wrap" fxLayoutGap="60%" fxLayout.lt-md="column">
 
-          <p fxFlex="20%" class="mat-title">Events</p>
+          <p fxFlex="20%" class="mat-title">{{'System.ManageHooksComponent.EditHook.Events'| translate }}</p>
 
           <button mat-raised-button fxFlex="20%" type="button" color="primary" (click)="addEvent()">
             <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-            Add Event
+            {{'System.ManageHooksComponent.EditHook.AddEvent'| translate }}
           </button>
 
         </div>
@@ -121,17 +121,17 @@
         <table mat-table [dataSource]="dataSource" matSort>
 
           <ng-container matColumnDef="entityName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Entity Name </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageHooksComponent.EditHook.entityName'| translate }} </th>
             <td mat-cell *matCellDef="let event"> {{ event.entityName }} </td>
           </ng-container>
 
           <ng-container matColumnDef="actionName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Action Name </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageHooksComponent.EditHook.actionName'| translate }} </th>
             <td mat-cell *matCellDef="let event"> {{ event.actionName }} </td>
           </ng-container>
 
           <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef> Actions </th>
+            <th mat-header-cell *matHeaderCellDef> {{'System.ManageHooksComponent.EditHook.Actions'| translate }} </th>
             <td mat-cell *matCellDef="let i = index">
               <button type="button" color="warn" mat-icon-button
                 (click)="deleteEvent(i)">
@@ -148,8 +148,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="(!hookForm.valid || hookForm.pristine) && !eventsDataChanged" *midasHasPermission="'UPDATE_HOOK'">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="(!hookForm.valid || hookForm.pristine) && !eventsDataChanged" *midasHasPermission="'UPDATE_HOOK'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
