--- a/src/app/system/manage-hooks/manage-hooks.component.html
+++ b/src/app/system/manage-hooks/manage-hooks.component.html
@@ -1,7 +1,7 @@
 <div class="container m-b-20" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px">
   <button mat-raised-button color="primary" [routerLink]="['create']" *midasHasPermission="'CREATE_HOOK'">
     <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-    Create Hook
+    {{'System.ManageHooksComponent.btnCreateHook'| translate }}
   </button>
 </div>
 
@@ -9,7 +9,7 @@
 
   <div fxLayout="row" fxLayoutGap="20px">
     <mat-form-field fxFlex>
-      <mat-label>Filter</mat-label>
+      <mat-label>{{'System.ManageHooksComponent.Filter'| translate }}</mat-label>
       <input matInput (keyup)="applyFilter($event.target.value)">
     </mat-form-field>
   </div>
@@ -19,17 +19,17 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Hook Template </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageHooksComponent.name'| translate }} </th>
         <td mat-cell *matCellDef="let hook"> {{ hook.name }} </td>
       </ng-container>
 
       <ng-container matColumnDef="displayName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Hook Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageHooksComponent.displayName'| translate }} </th>
         <td mat-cell *matCellDef="let hook"> {{ hook.displayName }} </td>
       </ng-container>
 
       <ng-container matColumnDef="isActive">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageHooksComponent.Status'| translate }} </th>
         <td mat-cell *matCellDef="let hook">
           <div [className]="hook.isActive === true ? 'true' : 'false'">
             <fa-icon matTooltip="{{ hook.isActive === true ? 'Active' : 'Inactive' }}" matTooltipPosition="right" icon="circle" size="lg"></fa-icon>
