--- a/src/app/system/manage-hooks/view-hook/view-hook.component.html
+++ b/src/app/system/manage-hooks/view-hook/view-hook.component.html
@@ -2,12 +2,12 @@
 
   <button mat-raised-button color="primary" [routerLink]="['edit']" *midasHasPermission="'UPDATE_HOOK'">
     <fa-icon icon="edit"></fa-icon>&nbsp;&nbsp;
-    Edit
+    {{ "ShareButton.Edit" | translate }}
   </button>
 
   <button mat-raised-button color="warn" (click)="delete()" *midasHasPermission="'DELETE_HOOK'">
     <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;
-    Delete
+    {{ "ShareButton.DeleteEng" | translate }}
   </button>
 
 </div>
@@ -21,7 +21,7 @@
       <div fxLayout="row wrap" class="content">
 
         <div fxFlex="50%" class="mat-body-strong">
-          Hook Name:
+          {{'System.ManageHooksComponent.ViewHook.displayName'| translate }}
         </div>
 
         <div fxFlex="50%">
@@ -29,7 +29,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong">
-          Status:
+          {{'System.ManageHooksComponent.ViewHook.Status'| translate }}
         </div>
 
         <div fxFlex="50%">
@@ -37,7 +37,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong">
-          Activation Date:
+          {{'System.ManageHooksComponent.ViewHook.createdAt'| translate }}
         </div>
 
         <div fxFlex="50%">
@@ -45,7 +45,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong">
-          Updated on:
+          {{'System.ManageHooksComponent.ViewHook.updatedAt'| translate }}
         </div>
 
         <div fxFlex="50%">
@@ -53,7 +53,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong">
-          Events:
+          {{'System.ManageHooksComponent.ViewHook.Events'| translate }}
         </div>
 
         <div fxFlex="50%">
@@ -69,7 +69,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong" *ngIf="hookData.name === 'Web'">
-          Content Type:
+          {{'System.ManageHooksComponent.ViewHook.ContentType'| translate }}
         </div>
 
         <div fxFlex="50%" *ngIf="hookData.name === 'Web'">
@@ -77,7 +77,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong">
-          Payload URL:
+          {{'System.ManageHooksComponent.ViewHook.PayloadURL'| translate }}
         </div>
 
         <div fxFlex="50%" *ngIf="hookData.name === 'Web'">
@@ -89,7 +89,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong" *ngIf="hookData.name === 'SMS Bridge'">
-          Phone Number:
+          {{'System.ManageHooksComponent.ViewHook.PhoneNumber'| translate }}
         </div>
 
         <div fxFlex="50%" *ngIf="hookData.name === 'SMS Bridge'">
@@ -97,7 +97,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong" *ngIf="hookData.name === 'SMS Bridge'">
-          SMS Provider:
+          {{'System.ManageHooksComponent.ViewHook.SMSProvider'| translate }}
         </div>
 
         <div fxFlex="50%" *ngIf="hookData.name === 'SMS Bridge'">
@@ -105,7 +105,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong" *ngIf="hookData.name === 'SMS Bridge'">
-          SMS Provider Account ID:
+          {{'System.ManageHooksComponent.ViewHook.SMSProviderAccountID'| translate }}
         </div>
 
         <div fxFlex="50%" *ngIf="hookData.name === 'SMS Bridge'">
@@ -113,7 +113,7 @@
         </div>
 
         <div fxFlex="50%" class="mat-body-strong" *ngIf="hookData.name === 'SMS Bridge'">
-          SMS Provider Token:
+          {{'System.ManageHooksComponent.ViewHook.SMSProviderToken'| translate }}
         </div>
 
         <div fxFlex="50%" *ngIf="hookData.name === 'SMS Bridge'">
