--- a/src/app/system/manage-reports/create-report/create-report.component.html
+++ b/src/app/system/manage-reports/create-report/create-report.component.html
@@ -9,15 +9,15 @@
         <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="4%">
 
           <mat-form-field fxFlex="30%">
-            <mat-label>Report Name</mat-label>
+            <mat-label>{{'System.ManageReportsComponent.Create.reportName'| translate }}</mat-label>
             <input matInput required formControlName="reportName">
             <mat-error *ngIf="reportForm.controls.reportName.hasError('required')">
-              Report Name is <strong>required</strong>
+              {{'System.ManageReportsComponent.Create.errreportName'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="30%">
-            <mat-label>Report Type</mat-label>
+            <mat-label>{{'System.ManageReportsComponent.Create.reportType'| translate }}</mat-label>
             <mat-select required formControlName="reportType">
               <mat-option *ngFor="let allowedReportType of reportTemplateData.allowedReportTypes"
                 [value]="allowedReportType">
@@ -25,12 +25,12 @@
               </mat-option>
             </mat-select>
             <mat-error *ngIf="reportForm.controls.reportType.hasError('required')">
-              Report Type is <strong>required</strong>
+              {{'System.ManageReportsComponent.Create.errreportType'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="30%">
-            <mat-label>Report Sub Type</mat-label>
+            <mat-label>{{'System.ManageReportsComponent.Create.reportSubType'| translate }}</mat-label>
             <mat-select formControlName="reportSubType">
               <mat-option *ngFor="let allowedReportSubType of reportTemplateData.allowedReportSubTypes"
                 [value]="allowedReportSubType">
@@ -44,13 +44,13 @@
         <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="4%">
 
           <mat-form-field fxFlex="40%">
-            <mat-label>Report Category</mat-label>
+            <mat-label>{{'System.ManageReportsComponent.Create.reportCategory'| translate }}</mat-label>
             <input matInput formControlName="reportCategory">
           </mat-form-field>
 
           <div fxFlex="10%" class="user-report-wrapper">
             <mat-checkbox class="user-report" labelPosition="before" formControlName="useReport">
-              User Report (UI)
+              {{'System.ManageReportsComponent.Create.useReport'| translate }}
             </mat-checkbox>
           </div>
 
@@ -59,15 +59,15 @@
         <div fxLayout="column">
 
           <mat-form-field fxFlex="98%">
-            <mat-label>Description</mat-label>
+            <mat-label>{{'System.ManageReportsComponent.Create.Description'| translate }}</mat-label>
             <textarea matInput formControlName="description"></textarea>
           </mat-form-field>
 
           <mat-form-field fxFlex="98%">
-            <mat-label>SQL</mat-label>
+            <mat-label>{{'System.ManageReportsComponent.Create.SQL'| translate }}</mat-label>
             <textarea matInput required formControlName="reportSql"></textarea>
             <mat-error *ngIf="reportForm.controls.reportSql.hasError('required')">
-              SQL is <strong>required</strong>
+              {{'System.ManageReportsComponent.Create.errSQL'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
@@ -77,11 +77,11 @@
 
         <div fxLayout="row wrap" fxLayoutGap="60%" fxLayout.lt-md="column">
 
-          <p fxFlex="20%" class="mat-title">Report Parameters</p>
+          <p fxFlex="20%" class="mat-title">{{'System.ManageReportsComponent.Create.ReportParameters'| translate }}</p>
 
           <button mat-raised-button fxFlex="20%" type="button" color="primary" (click)="addReportParameter()">
             <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-            Add Report Parameter
+            {{'System.ManageReportsComponent.Create.AddReportParameter'| translate }}
           </button>
 
         </div>
@@ -89,17 +89,17 @@
         <table mat-table [dataSource]="dataSource" matSort>
 
           <ng-container matColumnDef="parameterName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Parameter </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageReportsComponent.Create.Parameter'| translate }} </th>
             <td mat-cell *matCellDef="let reportParameter"> {{ reportParameter.parameterName }} </td>
           </ng-container>
 
           <ng-container matColumnDef="parameterNamePassed">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Parameter Name Passed to Pentaho </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageReportsComponent.Create.parameterNamePassed'| translate }} </th>
             <td mat-cell *matCellDef="let reportParameter"> {{ reportParameter.reportParameterName }} </td>
           </ng-container>
 
           <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef> Actions </th>
+            <th mat-header-cell *matHeaderCellDef> {{'System.ManageReportsComponent.Create.Actions'| translate }} </th>
             <td mat-cell *matCellDef="let reportParameter" fxLayoutGap="15%">
               <button type="button" fxFlex="8%" color="primary" mat-icon-button
                 (click)="editReportParameter(reportParameter)">
@@ -122,9 +122,9 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
         <button mat-raised-button type="submit" color="primary"
-          [disabled]="!reportForm.valid && reportParametersData.length === 0" *midasHasPermission="'CREATE_REPORT'">Submit</button>
+          [disabled]="!reportForm.valid && reportParametersData.length === 0" *midasHasPermission="'CREATE_REPORT'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
