--- a/src/app/system/manage-reports/edit-report/edit-report.component.html
+++ b/src/app/system/manage-reports/edit-report/edit-report.component.html
@@ -9,27 +9,27 @@
         <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="4%">
 
           <mat-form-field fxFlex="30%">
-            <mat-label>Report Name</mat-label>
+            <mat-label>{{'System.ManageReportsComponent.Edit.reportName'| translate }}</mat-label>
             <input matInput required formControlName="reportName">
             <mat-error *ngIf="reportForm.controls.reportName.hasError('required')">
-              Report Name is <strong>required</strong>
+              {{'System.ManageReportsComponent.Edit.errreportName'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="30%">
-            <mat-label>Report Type</mat-label>
+            <mat-label>{{'System.ManageReportsComponent.Edit.reportType'| translate }}</mat-label>
             <mat-select required formControlName="reportType">
               <mat-option *ngFor="let allowedReportType of reportData.allowedReportTypes" [value]="allowedReportType">
                 {{ allowedReportType }}
               </mat-option>
             </mat-select>
             <mat-error *ngIf="reportForm.controls.reportType.hasError('required')">
-              Report Type is <strong>required</strong>
+              {{'System.ManageReportsComponent.Edit.errreportType'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field fxFlex="30%">
-            <mat-label>Report Sub Type</mat-label>
+            <mat-label>{{'System.ManageReportsComponent.Edit.reportSubType'| translate }}</mat-label>
             <mat-select formControlName="reportSubType">
               <mat-option *ngFor="let allowedReportSubType of reportData.allowedReportSubTypes"
                 [value]="allowedReportSubType">
@@ -43,13 +43,13 @@
         <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="4%">
 
           <mat-form-field fxFlex="40%">
-            <mat-label>Report Category</mat-label>
+            <mat-label>{{'System.ManageReportsComponent.Edit.reportCategory'| translate }}</mat-label>
             <input matInput formControlName="reportCategory">
           </mat-form-field>
 
           <div fxFlex="10%" class="user-report-wrapper">
             <mat-checkbox class="user-report" labelPosition="before" formControlName="useReport">
-              User Report (UI)
+              {{'System.ManageReportsComponent.Edit.useReport'| translate }}
             </mat-checkbox>
           </div>
 
@@ -58,15 +58,15 @@
         <div fxLayout="column">
 
           <mat-form-field fxFlex="98%">
-            <mat-label>Description</mat-label>
+            <mat-label>{{'System.ManageReportsComponent.Edit.Description'| translate }}</mat-label>
             <textarea matInput formControlName="description"></textarea>
           </mat-form-field>
 
           <mat-form-field fxFlex="98%">
-            <mat-label>SQL</mat-label>
+            <mat-label>{{'System.ManageReportsComponent.Edit.SQL'| translate }}</mat-label>
             <textarea matInput required formControlName="reportSql"></textarea>
             <mat-error *ngIf="reportForm.controls.reportSql.hasError('required')">
-              SQL is <strong>required</strong>
+              {{'System.ManageReportsComponent.Edit.errSQL'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
@@ -76,12 +76,12 @@
 
         <div fxLayout="row wrap" fxLayoutGap="60%" fxLayout.lt-md="column">
 
-          <p fxFlex="20%" class="mat-title">Report Parameters</p>
+          <p fxFlex="20%" class="mat-title">{{'System.ManageReportsComponent.Edit.ReportParameters'| translate }}</p>
 
           <button mat-raised-button fxFlex="20%" type="button" *ngIf="!reportData.coreReport" color="primary"
             (click)="addReportParameter()">
             <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-            Add Report Parameter
+            {{'System.ManageReportsComponent.Edit.AddReportParameter'| translate }}
           </button>
 
         </div>
@@ -89,17 +89,17 @@
         <table mat-table [dataSource]="dataSource" matSort>
 
           <ng-container matColumnDef="parameterName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Parameter </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageReportsComponent.Edit.Parameter'| translate }} </th>
             <td mat-cell *matCellDef="let reportParameter"> {{ reportParameter.parameterName }} </td>
           </ng-container>
 
           <ng-container matColumnDef="parameterNamePassed">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Parameter Name Passed to Pentaho </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageReportsComponent.Edit.parameterNamePassed'| translate }} </th>
             <td mat-cell *matCellDef="let reportParameter"> {{ reportParameter.reportParameterName }} </td>
           </ng-container>
 
           <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef> Actions </th>
+            <th mat-header-cell *matHeaderCellDef> {{'System.ManageReportsComponent.Edit.Actions'| translate }} </th>
             <td mat-cell *matCellDef="let reportParameter" fxLayoutGap="15%">
               <button *ngIf="!reportData.coreReport" type="button" fxFlex="8%" color="primary" mat-icon-button
                 (click)="editReportParameter(reportParameter)">
@@ -122,9 +122,9 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
         <button mat-raised-button color="primary"
-          [disabled]="(!reportForm.valid || reportForm.pristine) && !isReportParametersChanged" *midasHasPermission="'UPDATE_REPORT'">Submit</button>
+          [disabled]="(!reportForm.valid || reportForm.pristine) && !isReportParametersChanged" *midasHasPermission="'UPDATE_REPORT'">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
