--- a/src/app/system/manage-reports/manage-reports.component.html
+++ b/src/app/system/manage-reports/manage-reports.component.html
@@ -1,7 +1,7 @@
 <div class="container m-b-20" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px">
     <button mat-raised-button color="primary" [routerLink]="['create']" *midasHasPermission="'CREATE_REPORT'">
         <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-        Create Report
+        {{'System.ManageReports.btnCreateReport'| translate }}
     </button>
 </div>
 
@@ -9,7 +9,7 @@
 
     <div fxLayout="row">
         <mat-form-field fxFlex>
-            <mat-label>Filter</mat-label>
+            <mat-label>{{'System.ManageReports.Filter'| translate }}</mat-label>
             <input matInput (keyup)="applyFilter($event.target.value)">
         </mat-form-field>
     </div>
@@ -19,27 +19,27 @@
         <table mat-table [dataSource]="dataSource" matSort>
 
             <ng-container matColumnDef="reportName">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Report Name </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageReportsComponent.reportName'| translate }} </th>
                 <td mat-cell *matCellDef="let report"> {{ report.reportName }} </td>
             </ng-container>
 
             <ng-container matColumnDef="reportType">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Report Type </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageReportsComponent.reportType'| translate }} </th>
                 <td mat-cell *matCellDef="let report"> {{ report.reportType }} </td>
             </ng-container>
 
             <ng-container matColumnDef="reportSubType">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Report Sub Type </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageReportsComponent.reportSubType'| translate }} </th>
                 <td mat-cell *matCellDef="let report"> {{ report.reportSubType }} </td>
             </ng-container>
 
             <ng-container matColumnDef="reportCategory">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Report Category </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageReportsComponent.reportCategory'| translate }} </th>
                 <td mat-cell *matCellDef="let report"> {{ report.reportCategory }} </td>
             </ng-container>
 
             <ng-container matColumnDef="coreReport">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Core Report </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageReportsComponent.coreReport'| translate }} </th>
                 <td mat-cell *matCellDef="let report">
                     <fa-icon *ngIf="report.coreReport" icon="check-circle" size="lg" class="true" matTooltip="Yes"
                         matTooltipPosition="right"></fa-icon>
@@ -49,7 +49,7 @@
             </ng-container>
 
             <ng-container matColumnDef="userReport">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> User Report </th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageReportsComponent.userReport'| translate }} </th>
                 <td mat-cell *matCellDef="let report">
                     <fa-icon *ngIf="report.useReport" icon="check-circle" size="lg" class="true" matTooltip="Yes"
                         matTooltipPosition="right"></fa-icon>
