--- a/src/app/system/manage-reports/report-parameter-dialog/report-parameter-dialog.component.html
+++ b/src/app/system/manage-reports/report-parameter-dialog/report-parameter-dialog.component.html
@@ -7,19 +7,19 @@
     <div fxLayout="column">
 
       <mat-form-field>
-        <mat-label>Select allowed parameter</mat-label>
+        <mat-label>{{'System.ManageReportsComponent.Parameter.parameterName'| translate }}</mat-label>
         <mat-select required formControlName="parameterName">
           <mat-option *ngFor="let allowedParameter of data.allowedParameters" [value]="allowedParameter.id">
             {{ allowedParameter.parameterName }}
           </mat-option>
         </mat-select>
         <mat-error *ngIf="reportParameterForm.controls.parameterName.hasError('required')">
-          Report Parameter is <strong>required</strong>
+          {{'System.ManageReportsComponent.Parameter.errparameterName'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
         </mat-error>
       </mat-form-field>
 
       <mat-form-field>
-        <mat-label>Parameter name passed to Pentaho</mat-label>
+        <mat-label>{{'System.ManageReportsComponent.Parameter.reportParameterName'| translate }}</mat-label>
         <input matInput formControlName="reportParameterName">
       </mat-form-field>
 
@@ -30,7 +30,7 @@
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Cancel</button>
+  <button mat-button mat-dialog-close>{{ "ShareButton.CancelEng" | translate }}</button>
   <button mat-raised-button color="primary"
-    [disabled]="!reportParameterForm.valid || reportParameterForm.pristine" (click)="submit()">Submit</button>
+    [disabled]="!reportParameterForm.valid || reportParameterForm.pristine" (click)="submit()">{{ "ShareButton.Submit" | translate }}</button>
 </mat-dialog-actions>
