--- a/src/app/system/manage-scheduler-jobs/edit-scheduler-job/edit-scheduler-job.component.html
+++ b/src/app/system/manage-scheduler-jobs/edit-scheduler-job/edit-scheduler-job.component.html
@@ -9,32 +9,32 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Job Name</mat-label>
+            <mat-label>{{'System.ManageSchedulerJobs.EditSchedulerJob.displayName'| translate }}</mat-label>
             <input matInput required formControlName="displayName">
             <mat-error *ngIf="jobForm.controls.displayName.hasError('required')">
-              Job Name is <strong>required</strong>
+              {{'System.ManageSchedulerJobs.EditSchedulerJob.errdisplayName'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Cron Expression</mat-label>
+            <mat-label>{{'System.ManageSchedulerJobs.EditSchedulerJob.cronExpression'| translate }}</mat-label>
             <input matInput required formControlName="cronExpression">
             <mat-error *ngIf="jobForm.controls.cronExpression.hasError('required')">
-              Cron Expression is <strong>required</strong>
+              {{'System.ManageSchedulerJobs.EditSchedulerJob.errcronExpression'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-checkbox labelPosition="before" formControlName="active">
-            Is job active?
+            {{'System.ManageSchedulerJobs.EditSchedulerJob.active'| translate }}
           </mat-checkbox>
-  
+
         </div>
 
         <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-          <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-          <button mat-raised-button color="primary" [disabled]="!jobForm.valid" *midasHasPermission="'UPDATE_SCHEDULER'">Submit</button>
+          <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+          <button mat-raised-button color="primary" [disabled]="!jobForm.valid" *midasHasPermission="'UPDATE_SCHEDULER'">{{ "ShareButton.Submit" | translate }}</button>
         </mat-card-actions>
-  
+
       </mat-card-content>
 
     </form>
