--- a/src/app/system/manage-scheduler-jobs/manage-scheduler-jobs.component.html
+++ b/src/app/system/manage-scheduler-jobs/manage-scheduler-jobs.component.html
@@ -2,7 +2,7 @@
   <h2 class="no-m">Scheduler Status: {{ schedulerData.active === true ? 'Active' : 'Inactive' }}</h2>
   <button mat-raised-button class="suspend">
     <fa-icon icon="times-circle"></fa-icon>&nbsp;&nbsp;
-    Suspend
+    {{'System.ManageSchedulerJobs.Suspend'| translate }}
   </button>
 </div>
 
@@ -10,7 +10,7 @@
 
   <div fxLayout="row" fxLayoutGap="20px">
     <mat-form-field fxFlex>
-      <mat-label>Filter</mat-label>
+      <mat-label>{{'System.ManageSchedulerJobs.Filter'| translate }}</mat-label>
       <input matInput (keyup)="applyFilter($event.target.value)">
     </mat-form-field>
   </div>
@@ -35,22 +35,22 @@
       </ng-container>
 
       <ng-container matColumnDef="displayName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageSchedulerJobs.Name'| translate }} </th>
         <td mat-cell *matCellDef="let job"> {{ job.displayName }} </td>
       </ng-container>
 
       <ng-container matColumnDef="nextRunTime">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Next Run </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageSchedulerJobs.nextRunTime'| translate }} </th>
         <td mat-cell *matCellDef="let job"> {{ job.nextRunTime }} </td>
       </ng-container>
 
       <ng-container matColumnDef="previousRunTime">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Previous Run </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageSchedulerJobs.previousRunTime'| translate }} </th>
         <td mat-cell *matCellDef="let job"> {{ job.lastRunHistory.jobRunStartTime }} </td>
       </ng-container>
 
       <ng-container matColumnDef="previousRunStatus">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Previous Run Status </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageSchedulerJobs.previousRunStatus'| translate }} </th>
         <td mat-cell *matCellDef="let job">
           <fa-icon *ngIf="job.lastRunHistory.status === 'success'" class="success" matTooltip="Successful" matTooltipPosition="right" icon="check-circle" size="lg"></fa-icon>
           <fa-icon *ngIf="!(job.lastRunHistory.status == 'success')" class="fail" matTooltip="Failed" matTooltipPosition="right" icon="times-circle" size="lg"></fa-icon>
@@ -58,7 +58,7 @@
       </ng-container>
 
       <ng-container matColumnDef="currentlyRunning">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Currently Running </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageSchedulerJobs.currentlyRunning'| translate }} </th>
         <td mat-cell *matCellDef="let job">
           <div [className]="job.currentlyRunning === true ? 'currently-running' : 'not-currently-running'">
               <fa-icon matTooltip="{{ job.currentlyRunning === true ? 'Yes' : 'No' }}" matTooltipPosition="right" icon="circle" size="lg"></fa-icon>
@@ -67,7 +67,7 @@
       </ng-container>
 
       <ng-container matColumnDef="errorLog">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Error Log </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageSchedulerJobs.errorLog'| translate }} </th>
         <td mat-cell *matCellDef="let job">
           <button mat-icon-button class="errorlog" *ngIf="!(job.lastRunHistory.status == 'success')" matTooltip="Error Log" matTooltipPosition="right" >
               <fa-icon icon="exclamation-circle" size="lg"></fa-icon>
@@ -89,10 +89,10 @@
 <div class="container" fxLayout="row" fxLayoutGap="20px">
   <button mat-raised-button color="primary">
     <fa-icon icon="play"></fa-icon>&nbsp;&nbsp;
-    Run Selected Jobs
+    {{'System.ManageSchedulerJobs.RunSelectedJobs'| translate }}
   </button>
   <button mat-raised-button color="primary">
     <fa-icon icon="sync"></fa-icon>&nbsp;&nbsp;
-    Refresh
+    {{'System.ManageSchedulerJobs.Refresh'| translate }}
   </button>
 </div>
