--- a/src/app/system/manage-scheduler-jobs/view-history-scheduler-job/view-history-scheduler-job.component.html
+++ b/src/app/system/manage-scheduler-jobs/view-history-scheduler-job/view-history-scheduler-job.component.html
@@ -3,7 +3,7 @@
   <div fxLayout="row" fxLayoutGap="20px">
 
     <mat-form-field fxFlex>
-      <mat-label>Filter By Version</mat-label>
+      <mat-label>{{'System.ManageSchedulerJobs.ViewHistorySchedulerJob.FilterByVersion'| translate }}</mat-label>
       <input matInput (keyup)="applyFilter($event.target.value)">
     </mat-form-field>
   </div>
@@ -13,30 +13,30 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="version" >
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Version </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageSchedulerJobs.ViewHistorySchedulerJob.Version'| translate }} </th>
         <td mat-cell *matCellDef="let jobHistoryData"> {{ jobHistoryData.version }} </td>
       </ng-container>
 
       <ng-container matColumnDef="run_start_time">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Run Start Time </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageSchedulerJobs.ViewHistorySchedulerJob.run_start_time'| translate }} </th>
         <td mat-cell *matCellDef="let jobHistoryData"> {{ jobHistoryData.jobRunStartTime }} </td>
       </ng-container>
 
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-        <td mat-cell *matCellDef="let jobHistoryData"> 
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageSchedulerJobs.ViewHistorySchedulerJob.Status'| translate }} </th>
+        <td mat-cell *matCellDef="let jobHistoryData">
           <fa-icon *ngIf="jobHistoryData.status === 'success'" class="success" matTooltip="Successful" matTooltipPosition="right" icon="check-circle" size="lg"></fa-icon>
           <fa-icon *ngIf="!(jobHistoryData.status == 'success')" class="fail" matTooltip="Failed" matTooltipPosition="right" icon="times-circle" size="lg"></fa-icon>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="run_type">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Run Type </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageSchedulerJobs.ViewHistorySchedulerJob.run_type'| translate }} </th>
         <td mat-cell *matCellDef="let jobHistoryData">{{ jobHistoryData.triggerType }}</td>
       </ng-container>
 
       <ng-container matColumnDef="error_log">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Error Log </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageSchedulerJobs.ViewHistorySchedulerJob.error_log'| translate }} </th>
         <td mat-cell *matCellDef="let jobHistoryData">
           <button mat-icon-button class="errorlog" *ngIf="!(jobHistoryData.status == 'success')" matTooltip="Error Log" matTooltipPosition="right" (click)="openError(jobHistoryData.version)">
             <fa-icon icon="exclamation-circle" size="lg"></fa-icon>
