--- a/src/app/system/manage-surveys/create-survey/create-survey.component.html
+++ b/src/app/system/manage-surveys/create-survey/create-survey.component.html
@@ -11,41 +11,41 @@
           <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
 
             <mat-form-field fxFlex="48%">
-              <mat-label>Key</mat-label>
+              <mat-label>{{'System.ManageSurveysComponent.CreateSurvey.Key'| translate }}</mat-label>
               <input matInput maxlength="32" required formControlName="key">
               <mat-error *ngIf="surveyForm.controls.key.hasError('required')">
-                Key is <strong>required</strong>
-              </mat-error>
-            </mat-form-field>
-            
-            <mat-form-field fxFlex="48%">
-              <mat-label>Name</mat-label>
-              <input matInput maxlength="255" required formControlName="name">
-              <mat-error *ngIf="surveyForm.controls.name.hasError('required')">
-                Name is <strong>required</strong>
+                {{'System.ManageSurveysComponent.CreateSurvey.errKey'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
               </mat-error>
             </mat-form-field>
 
             <mat-form-field fxFlex="48%">
-              <mat-label>Country Code</mat-label>
+              <mat-label>{{'System.ManageSurveysComponent.CreateSurvey.Name'| translate }}</mat-label>
+              <input matInput maxlength="255" required formControlName="name">
+              <mat-error *ngIf="surveyForm.controls.name.hasError('required')">
+                {{'System.ManageSurveysComponent.CreateSurvey.errName'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
+              </mat-error>
+            </mat-form-field>
+
+            <mat-form-field fxFlex="48%">
+              <mat-label>{{'System.ManageSurveysComponent.CreateSurvey.countryCode'| translate }}</mat-label>
               <input matInput maxlength="2" required formControlName="countryCode">
               <mat-error *ngIf="surveyForm.controls.countryCode.hasError('required')">
-                Country Code is <strong>required</strong>
+                {{'System.ManageSurveysComponent.CreateSurvey.errcountryCode'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
               </mat-error>
               <mat-error *ngIf="surveyForm.controls.countryCode.hasError('pattern')">
-                Country Code <strong>must consist of 2 alphabetic characters</strong>
+                {{'System.ManageSurveysComponent.CreateSurvey.errcountryCode2'| translate }}<strong>must consist of 2 alphabetic characters</strong>
               </mat-error>
             </mat-form-field>
 
             <mat-form-field fxFlex="98%">
-              <mat-label>Description</mat-label>
+              <mat-label>{{'System.ManageSurveysComponent.CreateSurvey.Description'| translate }}</mat-label>
               <textarea matInput formControlName="description"></textarea>
             </mat-form-field>
 
             <div fxFlexFill fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px" *ngIf="!questionDatas.length">
-              <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
+              <button type="button" mat-raised-button [routerLink]="['../']">{{'System.ManageSurveysComponent.CreateSurvey.Cancel'| translate }}</button>
               <button type="button" mat-raised-button color="primary" [disabled]="!(this.surveyForm.get('key').valid && this.surveyForm.get('name').valid && this.surveyForm.get('countryCode').valid)" (click)="addQuestion()">
-                Proceed
+                {{'System.ManageSurveysComponent.CreateSurvey.Proceed'| translate }}
               </button>
             </div>
 
@@ -67,63 +67,64 @@
                 <h2 class="mat-h2">Question {{ questionIndex + 1 }}</h2>
                 <button mat-raised-button color="warn" (click)="removeQuestion(questionIndex)" [disabled]="questionDatas.controls.length === 1">
                   <fa-icon icon="trash"></fa-icon>&nbsp;&nbsp;
-                  Delete Question
+                  {{'System.ManageSurveysComponent.CreateSurvey.DeleteQuestion'| translate }}
                 </button>
               </div>
 
               <mat-form-field fxFlex="48%">
-                <mat-label>Key</mat-label>
+                <mat-label>{{'System.ManageSurveysComponent.CreateSurvey.Key'| translate }}</mat-label>
                 <input matInput maxlength="32" required formControlName="key">
                 <mat-error *ngIf="question.controls.key.hasError('required')">
-                  Key is <strong>required</strong>
+                  {{'System.ManageSurveysComponent.CreateSurvey.errKey'| translate }}<strong>required</strong>
                 </mat-error>
               </mat-form-field>
-              
+
               <mat-form-field fxFlex="48">
-                <mat-label>Text</mat-label>
+                <mat-label>{{'System.ManageSurveysComponent.CreateSurvey.Text'| translate }}</mat-label>
                 <input matInput maxlength="255" required formControlName="text">
                 <mat-error *ngIf="question.controls.text.hasError('required')">
-                  Text is <strong>required</strong>
+                  {{'System.ManageSurveysComponent.CreateSurvey.errText'| translate }}<strong>required</strong>
                 </mat-error>
               </mat-form-field>
 
               <mat-form-field fxFlex="98%">
-                <mat-label>Description</mat-label>
+                <mat-label>{{'System.ManageSurveysComponent.CreateSurvey.Description'| translate }}</mat-label>
                 <textarea matInput formControlName="description"></textarea>
               </mat-form-field>
 
               <mat-divider [inset]="true"></mat-divider>
 
               <div fxFlex="98%" fxLayout="row" fxLayoutAlign="space-between center">
-                <h4 class="mat-h4">Options</h4>
+                <h4 class="mat-h4">{{'System.ManageSurveysComponent.CreateSurvey.Options'| translate }}</h4>
                 <button type="button" mat-raised-button color="primary" (click)="addResponse(questionIndex)">
                   <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-                  Add Option
+                  {{'System.ManageSurveysComponent.CreateSurvey.AddOption'| translate }}
                 </button>
               </div>
-        
+
               <div cdkDropList (cdkDropListDropped)="dropResponse($event, questionIndex)" fxFlexFill fxLayout="row wrap" fxLayoutGap="2%">
 
                 <div cdkDrag cdkDragLockAxis="y" fxFlexFill fxLayout="row wrap" fxLayoutGap="2%" formArrayName="responseDatas" *ngFor="let response of getResponseDatas(questionIndex).controls; let responseIndex = index;">
-                  
+
                   <div fxFlexFill fxLayout="row wrap" fxLayoutGap="2%" [formGroupName]="responseIndex">
 
                     <mat-form-field fxFlex="43%">
-                      <mat-label>Text</mat-label>
+                      <mat-label>{{'System.ManageSurveysComponent.CreateSurvey.Text'| translate }}</mat-label>
                       <input matInput required formControlName="text">
                       <mat-error *ngIf="response.controls.text.hasError('required')">
-                        Text is <strong>required</strong>
+                        {{'System.ManageSurveysComponent.CreateSurvey.errText'| translate }}<strong>required</strong>
                       </mat-error>
                     </mat-form-field>
 
                     <mat-form-field fxFlex="43%">
-                      <mat-label>Value</mat-label>
+                      <mat-label>{{'System.ManageSurveysComponent.CreateSurvey.Value'| translate }}</mat-label>
                       <input matInput required formControlName="value">
                       <mat-error *ngIf="response.controls.value.hasError('required')">
-                        Value is <strong>required</strong>
+                        {{'System.ManageSurveysComponent.CreateSurvey.errValue'| translate }}<strong>required</strong>
                       </mat-error>
                       <mat-error *ngIf="response.controls.value.hasError('pattern')">
-                        Value <strong>must be an integer between -9999 and 9999</strong>
+                        {{'System.ManageSurveysComponent.CreateSurvey.Value'| translate }}
+                        <strong>{{'System.ManageSurveysComponent.CreateSurvey.alertValue'| translate }}</strong>
                       </mat-error>
                     </mat-form-field>
 
@@ -131,10 +132,10 @@
                       <div class="delete-wrapper">
                         <button type="button" color="warn" mat-icon-button matTooltip="Delete" matTooltipPosition="above" (click)="removeResponse(getResponseDatas(questionIndex), responseIndex)" [disabled]="getResponseDatas(questionIndex).controls.length === 1">
                           <fa-icon icon="trash" size="lg"></fa-icon>
-                        </button>  
+                        </button>
                       </div>
                     </div>
-                          
+
                   </div>
 
                 </div>
@@ -148,17 +149,17 @@
           <div>
 
             <mat-card-actions *ngIf="isLast" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-              <button type="button" mat-raised-button (click)="cancelSurvey()">Cancel</button>
+              <button type="button" mat-raised-button (click)="cancelSurvey()">{{'System.ManageSurveysComponent.CreateSurvey.Cancel'| translate }}</button>
               <button type="button" mat-raised-button color="primary"(click)="addQuestion()">
                 <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-                Add Question
+                {{'System.ManageSurveysComponent.CreateSurvey.AddQuestion'| translate }}
               </button>
-              <button mat-raised-button color="primary" [disabled]="!surveyForm.valid">Submit</button>
-            </mat-card-actions>    
+              <button mat-raised-button color="primary" [disabled]="!surveyForm.valid">{{'System.ManageSurveysComponent.CreateSurvey.Submit'| translate }}</button>
+            </mat-card-actions>
 
           </div>
 
-        </mat-card>  
+        </mat-card>
 
       </div>
 
