--- a/src/app/system/manage-surveys/manage-surveys.component.html
+++ b/src/app/system/manage-surveys/manage-surveys.component.html
@@ -1,45 +1,45 @@
 <div class="container m-b-20" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px">
   <button mat-raised-button color="primary" [routerLink]="['create']">
     <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;
-    Create Surveys
+    {{'System.ManageSurveysComponent.CreateSurveys'| translate }}
   </button>
 </div>
-  
+
 <div class="container">
 
   <div fxLayout="row">
     <mat-form-field fxFlex>
-      <mat-label>Filter</mat-label>
+      <mat-label>{{'System.ManageSurveysComponent.Filter'| translate }}</mat-label>
       <input matInput (keyup)="applyFilter($event.target.value)">
     </mat-form-field>
   </div>
-  
+
   <div class="mat-elevation-z8">
-    
+
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="key">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Key </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageSurveysComponent.Key'| translate }} </th>
           <td mat-cell *matCellDef="let survey"> {{ survey.key }} </td>
       </ng-container>
-        
+
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageSurveysComponent.Name'| translate }} </th>
         <td mat-cell *matCellDef="let survey"> {{ survey.name }} </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageSurveysComponent.Description'| translate }} </th>
         <td mat-cell *matCellDef="let survey"> {{ survey.description }} </td>
       </ng-container>
-  
+
       <ng-container matColumnDef="countryCode">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Country Code </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageSurveysComponent.countryCode'| translate }} </th>
         <td mat-cell *matCellDef="let survey"> {{ survey.countryCode }} </td>
       </ng-container>
 
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageSurveysComponent.Status'| translate }} </th>
         <td mat-cell *matCellDef="let survey">
             <div [className]="!isActive(survey.validFrom, survey.validTo) === true ? 'disabled' : 'enabled'">
                 <fa-icon matTooltip="{{ !isActive(survey.validFrom, survey.validTo) === true ? 'Disabled' : 'Enabled' }}" matTooltipPosition="right" icon="circle" size="lg"></fa-icon>
@@ -48,17 +48,17 @@
       </ng-container>
 
       <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{'System.ManageSurveysComponent.Action'| translate }} </th>
         <td mat-cell *matCellDef="let survey">
           <button mat-button *ngIf="!isActive(survey.validFrom, survey.validTo)" color="accent">
-            <fa-icon icon="lock-open"></fa-icon>&nbsp;&nbsp;Activate
+            <fa-icon icon="lock-open"></fa-icon>&nbsp;&nbsp;{{'System.ManageSurveysComponent.Activate'| translate }}
           </button>
           <button mat-button *ngIf="isActive(survey.validFrom, survey.validTo)" color="warn">
-            <fa-icon icon="lock"></fa-icon>&nbsp;&nbsp;Deactivate
+            <fa-icon icon="lock"></fa-icon>&nbsp;&nbsp;{{'System.ManageSurveysComponent.Deactivate'| translate }}
           </button>
-        </td> 
+        </td>
       </ng-container>
-  
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let survey; columns: displayedColumns;" [routerLink]="[survey.id]" class="select-row"></tr>
 
