--- a/src/app/system/roles-and-permissions/add-role/add-role.component.html
+++ b/src/app/system/roles-and-permissions/add-role/add-role.component.html
@@ -9,18 +9,18 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Name</mat-label>
+            <mat-label>{{'System.RolesAndPermissions.AddRoleComponent.Name'| translate }}</mat-label>
             <input matInput required formControlName="name">
             <mat-error *ngIf="roleForm.controls.name.hasError('required')">
-              Role Name is <strong>required</strong>
+              {{'System.RolesAndPermissions.AddRoleComponent.errName'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Description</mat-label>
+            <mat-label>{{'System.RolesAndPermissions.AddRoleComponent.Description'| translate }}</mat-label>
             <textarea matInput required formControlName="description"></textarea>
             <mat-error *ngIf="roleForm.controls.description.hasError('required')">
-              Role Description is <strong>required</strong>
+              {{'System.RolesAndPermissions.AddRoleComponent.errDescription'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
             </mat-error>
           </mat-form-field>
 
@@ -29,8 +29,8 @@
         </mat-card-content>
 
         <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-          <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-          <button mat-raised-button color="primary" [disabled]="!roleForm.valid">Submit</button>
+          <button type="button" mat-raised-button [routerLink]="['../']">{{ "ShareButton.CancelEng" | translate }}</button>
+          <button mat-raised-button color="primary" [disabled]="!roleForm.valid">{{ "ShareButton.Submit" | translate }}</button>
         </mat-card-actions>
 
       </form>
