--- a/src/app/system/roles-and-permissions/edit-role/edit-role.component.html
+++ b/src/app/system/roles-and-permissions/edit-role/edit-role.component.html
@@ -9,15 +9,15 @@
           <div fxLayout="column">
 
             <mat-form-field>
-              <mat-label>Role Name</mat-label>
+              <mat-label>{{'System.RolesAndPermissions.EditRoleComponent.name'| translate }}</mat-label>
               <input matInput disabled formControlName="name">
             </mat-form-field>
 
             <mat-form-field>
-              <mat-label>Role Description</mat-label>
+              <mat-label>{{'System.RolesAndPermissions.EditRoleComponent.description'| translate }}</mat-label>
               <input matInput required formControlName="description">
               <mat-error *ngIf="roleForm.controls.description.hasError('required')">
-                Description is <strong>required</strong>
+                {{'System.RolesAndPermissions.EditRoleComponent.errdescription'| translate }}<strong>{{'System.strongRequired'| translate }}</strong>
               </mat-error>
             </mat-form-field>
 
@@ -26,8 +26,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!roleForm.valid || roleForm.pristine">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../../']">{{ "ShareButton.CancelEng" | translate }}</button>
+        <button mat-raised-button color="primary" [disabled]="!roleForm.valid || roleForm.pristine">{{ "ShareButton.Submit" | translate }}</button>
       </mat-card-actions>
 
     </form>
